ignore config file

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 [data]
-DATA_PATH = /path/to/data
-OUTPUT_DATA_PATH = /path/to/output/data
+DATA_PATH = /Users/nolwenbrosson/Desktop/repos_root/mangopay-test/input_data/
+OUTPUT_DATA_PATH = /Users/nolwenbrosson/Desktop/repos_root/mangopay-test/output_data/
 IDENTITY_DATA = test_identity.csv
 TRANSACTION_DATA = test_transaction.csv
